# RHPC-Simulator

./: .gitignore  CMakeLists.txt  FixMe.fixme  README.md  Soumik.txt  ToDo.todo
SimDeviceGUI/: CMakeLists.txt
SimDeviceGUI/include/: simdevicegui.h
SimDeviceGUI/src/: icons.pptx  main.cpp  simdevice.rc  simdevice.ui  simdevicegui.cpp
libs/: CMakeLists.txt
